Fixed converge/diverge spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-    /*background-image:url('../scribble_light/scribble_light.png');
-    background-image:url('../img/squairy_light/squairy_light.png');*/
+    /*background-image:url('../img/squairy_light/squairy_light.png');*/
 }
 
 .thumbnail {
@@ -16,6 +15,6 @@ body {
 	padding-top: 15px;
 }
 
-.row .large-8 {
+.row .large-8 , .row .large-12 {
 	padding-top: 20px;
 }
